--- a/package.json
+++ b/package.json
@@ -5,54 +5,39 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest",
-    "create-user": "tsx src/lib/create-user.ts",
-    "create-superadmin": "tsx src/lib/create-superadmin.ts"
+    "test": "vitest"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "embla-carousel-autoplay": "^8.0.0",
-    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
-    "immer": "^10.0.3",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "mysql2": "^3.9.2",
-    "nodemailer": "^6.9.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "swiper": "^11.0.6",
     "uuid": "^9.0.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/nodemailer": "^6.4.14", 
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "@types/uuid": "^9.0.8",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "jsdom": "^24.0.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
     "vitest": "^1.3.1"
   }
 }
