--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=sdb-r.hosting.stackcp.net
-DB_USER=meenakshidbuser
-DB_PASSWORD=P@5sw0rd123
-DB_DATABASE=meenakshistore-3230368ae0
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=meenakshi
