--- a/package.json
+++ b/package.json
@@ -8,27 +8,21 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest",
-    "check-db": "tsx src/lib/check-db.ts",
-    "setup-db": "tsx src/lib/setup-db.ts"
+    "test": "vitest"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@supabase/supabase-js": "^2.39.7",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
-    "mysql2": "^3.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "swiper": "^11.0.6",
-    "uuid": "^9.0.1",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
-    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
@@ -38,7 +32,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
     "vitest": "^1.3.1"
